# bgame

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO LIST.md  bundle-alpha.bat  bundle-mac-alpha.sh  config.h  linux-dependency-copy.sh  main.cpp  setup-unix-build.sh  test_mode.h
engine/: CMakeLists.txt  ansi_backend.cpp  base_mode.h  base_system.h  colors.h  command_manager.cpp  command_manager.h  component_storage.h  curses_charmap.h  ecs.h  ecs.hpp  engine.cpp  engine.h  entity.cpp  entity.h  entity_storage.h  geometry.cpp  geometry.hpp  globals.cpp  globals.h  messagebus.h  mpl_foreach.h  mpl_typelist.h  ncurses_backend.cpp  ncurses_backend.h  output_backend.cpp  output_backend.h  perlin_noise.cpp  perlin_noise.hpp  png_writer.h  rng.cpp  rng.h  scene_graph.h  sdl2_backend.cpp  sdl2_backend.h  sdl2_resources.h  virtual_terminal.cpp  virtual_terminal.h
engine/backends/: CMakeLists.txt  ansi_backend.cpp  ansi_backend.h  command_manager.h  ncurses_backend.cpp  ncurses_backend.h  output_backend.cpp  output_backend.h  sdl2_backend.cpp  sdl2_backend.h
engine/ecs/: CMakeLists.txt  base_component.h  base_message.h  base_system.h  calendar_component.h  calendar_system.cpp  calendar_system.h  camera_system.h  component_bag.h  component_storage.h  debug_name_component.h  ecs.cpp  ecs.h  entity.cpp  entity.h  entity_factory.cpp  entity_factory.h  entity_storage.h  obstruction_component.h  obstruction_system.cpp  obstruction_system.h  position_component.h  power_battery_component.h  power_generator_component.h  power_system.cpp  power_system.h  renderable_component.h  renderable_system.cpp  renderable_system.h  serialization.h  settler_ai_component.h  settler_ai_system.cpp  settler_ai_system.h  system_factory.h  test_system.h  viewshed_component.h  viewshed_system.cpp  viewshed_system.h
engine/gui/: CMakeLists.txt  gui.cpp  gui.h  gui_console.cpp  gui_console.h  gui_element_base.h  gui_frame.h  gui_main_game_command_panel.cpp  gui_main_game_command_panel.h  gui_main_game_view.cpp  gui_main_game_view.h  gui_static_text.h
engine/raws/: CMakeLists.txt  base_raw.h  raw_color_pair.h  raw_description.h  raw_name.h  raw_obstruction.h  raw_power_battery.h  raw_power_generator.cpp  raw_power_generator.h  raw_power_generator_condition.h  raw_renderable.h  raws.cpp  raws.h
game/: CMakeLists.txt  colors.h  game.cpp  game.h  game_mode.cpp  game_mode.hpp  game_render.cpp  game_render.h  genesis_mode.cpp  genesis_mode.h  loading_screen.cpp  loading_screen.h  main_menu.cpp  main_menu.h  play_mode.cpp  play_mode.h  render_tooltips.cpp  render_tooltips.h  world_gen_mode.cpp  world_gen_mode.h
game/components/: calendar_component.h  component_loader.h  component_types.h  components.h  debug_name_component.h  game_health_component.h  game_species_component.h  game_stats_component.h  item_carried_component.h  item_component.h  item_storage_component.h  obstruction_component.h  particle_emitter_component.h  position_component.h  position_component3d.hpp  power_battery_component.h  power_generator_component.h  provisions_component.h  renderable_component.h  settler_ai_component.h  viewshed_component.h
game/gui/: gui_console.cpp  gui_console.h  gui_main_game_command_panel.cpp  gui_main_game_command_panel.h  gui_main_game_view.cpp  gui_main_game_view.h
game/messages/: build_order_message.h  chat_emote_message.h  chop_order_message.h  command_message.h  inflict_damage_message.h  item_changed_message.h  messages.h  particle_message.h  power_consumed_message.h  reaction_order_message.h  walkability_changed_message.h
game/raws/: base_raw.h  raw_buildable.h  raw_clothing.h  raw_clothing_slot.h  raw_color_pair.h  raw_component.h  raw_description.h  raw_emote.h  raw_glyph.h  raw_input.h  raw_item_type.h  raw_name.h  raw_obstruction.h  raw_particle_emitter.h  raw_power_battery.h  raw_power_generator.cpp  raw_power_generator.h  raw_render_layer.h  raw_renderable.h  raw_settler_action.h  raw_skill_required.h  raw_sleepable.h  raw_tile.h  raw_workshop.h  raws.cpp  raws.h
game/render/: build_options_window.h  colors.h  game_render.cpp  game_render.h  line_buffer.h  panel_tile_info.h  panel_tooltip.cpp  panel_tooltip.h  render_tile_options.cpp  render_tile_options.h  render_tooltips.cpp  render_tooltips.h  settler_compositor.cpp  settler_info_window.h  structure_info_window.h  terrain_info_window.h  window.cpp  window.h
game/systems/: CMakeLists.txt  calendar_system.cpp  calendar_system.h  camera_system.cpp  camera_system.h  cordex_ai_system.cpp  cordex_ai_system.h  damage_system.cpp  flowmap_system.cpp  flowmap_system.h  input_system.cpp  input_system.h  inventory_system.cpp  inventory_system.h  obstruction_system.cpp  obstruction_system.h  particle_system.cpp  particle_system.h  power_system.cpp  power_system.h  renderable_system.cpp  renderable_system.h  settler_ai_system.cpp  settler_ai_system.h  system_factory.cpp  system_factory.h  viewshed_system.cpp  viewshed_system.h
game/tasks/: find_nearest_provision.cpp  find_nearest_provision.h  help_wanted.cpp  help_wanted.h  path_finding.cpp  path_finding.h
game/world/: CMakeLists.txt  console.cpp  console.h  geometry.cpp  geometry.h  landblock.cpp  landblock.h  location.h  location.hpp  planet.cpp  planet.hpp  region.cpp  region.hpp  serialization_utils.cpp  serialization_utils.h  shared_data.hpp  skill_test.h  solar_system.cpp  solar_system.hpp  solar_system_body.cpp  solar_system_body.hpp  tables.h  tile.cpp  tile.h  tile3d.cpp  tile3d.hpp  tile_material.h  tile_types.hpp  universe.cpp  universe.hpp  universegen.cpp  universegen.hpp  world.cpp  world.h  world_defs.hpp  world_gen.cpp  world_gen.hpp  world_gen_fault_lines.cpp  world_gen_fault_lines.hpp  world_gen_hydrology.cpp  (+7 more)
src/: CMakeLists.txt  CMakeSettings.json  constants.hpp  game_globals.cpp  game_globals.hpp  main.cpp  main_menu.cpp  main_menu.hpp  menu_helper.cpp  play_game.cpp  play_game.hpp  splash_screen.cpp  splash_screen.hpp  stdafx.h  world_gen.cpp  world_gen.hpp
src/FastNoise/: FastNoise.h
src/ascii_engine/: ascii_mode.cpp  ascii_mode.hpp
src/bengine/: CMakeLists.txt  (+63 more)
(+2040 files in other folders)
