add_library(game 
	    game.cpp 
	    loading_screen.cpp 
	    main_menu.cpp 
	    play_mode.cpp 
	    world_gen_mode.cpp
	    genesis_mode.cpp
	    game_mode.cpp
	    
	    render/game_render.cpp
	    render/panel_tooltip.cpp
	    render/window.cpp
	    render/settler_compositor.cpp
	    
	    world/gen/world_gen.cpp
	    world/planet.cpp
	    world/region.cpp
	    world/tile3d.cpp
	    world/gen/world_gen_biomes.cpp
	    world/gen/world_height_map_marching_squares.cpp
	    world/gen/world_gen_hydrology.cpp
	    world/gen/world_gen_layer_cake.cpp
	    world/gen/world_gen_noise.cpp
	    
	    raws/raws.cpp 
	    raws/raw_power_generator.cpp	    
	    systems/system_factory.cpp 
	    systems/calendar_system.cpp 
	    systems/camera_system.cpp 
	    systems/obstruction_system.cpp 
	    systems/power_system.cpp 
	    systems/renderable_system.cpp 
	    systems/settler_ai_system.cpp 
	    systems/viewshed_system.cpp 
	    systems/input_system.cpp
	    systems/inventory_system.cpp
	    systems/cordex_ai_system.cpp
	    systems/damage_system.cpp
	    systems/particle_system.cpp
	    tasks/help_wanted.cpp
	    tasks/path_finding.cpp
	    tasks/find_nearest_provision.cpp
	    world/world.cpp 
	    world/tile.cpp 
	    world/landblock.cpp 
	    world/console.cpp 
	    world/worldgen.cpp 
	    world/serialization_utils.cpp
	    world/universe.cpp
	    world/solar_system.cpp
	    world/solar_system_body.cpp
	    world/universegen.cpp
	    )
	    