add_library(bengine
        main_window.cpp
        stb_image.cpp
        textures.cpp
        shaders.cpp
        simple_sprite.cpp
        imgui.cpp
        imgui_impl_glfw_gl3.cpp
        imgui_draw.cpp
        threadpool.cpp
        filesystem.cpp
        color_t.cpp
        pcg_basic.c
        random_number_generator.cpp
        )
cotire(bengine)