add_library(bengine
        analytics.cpp
        color_t.cpp
        ecs.cpp
        FastNoise.cpp
        filesystem.cpp
        geometry.cpp
        imgui.cpp
        imgui_draw.cpp
        imgui_impl_glfw_gl3.cpp
        main_window.cpp
        octree.cpp
        pcg_basic.cpp
        random_number_generator.cpp
        rexspeeder.cpp
        shaders.cpp
        simple_sprite.cpp
        stb_image.cpp
        string_utils.cpp
        telemetry.cpp
        textures.cpp
        threadpool.cpp
        )
target_link_libraries(bengine ${Boost_PROGRAM_OPTIONS_LIBRARIES} ${Boost_FILESYSTEM_LIBRARIES} ${Boost_SYSTEM_LIBRARIES})
#cotire(bengine)